--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite-plugin-svgr": "^2.2.1",
+    "@rollup/plugin-alias": "^3.1.9",
     "@svgr/core": "^6.2.1",
-    "esbuild": "^0.14.50",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "esbuild": "^0.14.50",
     "postcss-preset-env": "^7.7.2",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-plugin-svgr": "^2.2.1"
   },
   "browserslist": {
     "production": [
