--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=570e66f1db8b"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.0.3",
@@ -15,13 +18,25 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@rollup/plugin-alias": "^3.1.9",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-docs": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-vite": "^0.2.2",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "0.0.13",
     "@svgr/core": "^6.2.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "babel-loader": "^8.2.5",
+    "chromatic": "^6.7.3",
     "esbuild": "^0.14.50",
     "postcss-preset-env": "^7.7.2",
+    "typescript": "^4.7.4",
     "vite": "^3.0.0",
     "vite-plugin-svgr": "^2.2.1"
   },
@@ -34,5 +49,7 @@
     "development": [
       "last 4 version"
     ]
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "blkbox-ui@0.0.0"
 }
